[package]
name = "week-year"
version = "0.1.0"
authors = ["Jerebtw"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5" }
chrono = "0.4.23"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
lto = true
