[package]
name = "week-year"
description = "A simple library to get a date range from a week number and year"
repository = "https://github.com/jerebtw/week-year"
version = "0.1.1"
authors = ["Jerebtw"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
time = { version = "0.3.20", features = ["formatting", "wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "z"
lto = true
